Add S3 CNAME as backup metadata location for first-party plugins.